--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=${PORT:5000}
 # JDBC_DATABASE_URL is not set. We use this here to reduce friction when newcomers work with this getting started
 # application. Production applications should not have a default like this, especially not ones that have credentials
 # in them!
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://ec2-52-4-153-146.compute-1.amazonaws.com}
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://127.0.0.1:5432/irizq_kitchen}
 spring.datasource.username=postgres
 spring.datasource.password=system
