--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.4.5</version>
+        </dependency>
     </dependencies>
 
     <build>
