--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.port=${PORT:5000}
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://ec2-52-4-153-146.compute-1.amazonaws.com}
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://127.0.0.1:5432/irizq_kitchen}
 spring.datasource.username=postgres
-spring.datasource.password=anis0912
+spring.datasource.password=system
