--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://ec2-52-4-153-146.com
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://127.0.0.1:5432/irizq_kitchen}
 spring.datasource.username=postgres
 spring.datasource.password=system
+
+# Enable file upload support
+spring.servlet.multipart.enabled=true
+
+
+# Maximum file size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
